crates/vespera_macro/src/schema_macro/from_model/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_many_enum_fk_found.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let author_comments = crate::models::comment::Entity::AuthorId
            .into_column()
            .eq(model.id.clone())
            .into_condition();
        let author_comments = crate::models::comment::Entity::find()
            .filter(author_comments)
            .all(db)
            .await?;
        let __parent_stub__ = Self {
            id: model.id.clone(),
            author_comments: vec![],
        };
        Ok(Self {
            id: model.id,
            author_comments: author_comments
                .into_iter()
                .map(|r| crate::models::comment::Schema {
                    id: r.id,
                    content: r.content,
                    author_id: r.author_id,
                    author: Box::new(__parent_stub__.clone()),
                })
                .collect(),
        })
    }
}
