crates/vespera_macro/src/schema_macro/from_model/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_many_via_rel_fk_found.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let target_user_notifications = crate::models::notification::Entity::TargetUserId
            .into_column()
            .eq(model.id.clone())
            .into_condition();
        let target_user_notifications = crate::models::notification::Entity::find()
            .filter(target_user_notifications)
            .all(db)
            .await?;
        let __parent_stub__ = Self {
            id: model.id.clone(),
            target_user_notifications: vec![],
        };
        Ok(Self {
            id: model.id,
            target_user_notifications: target_user_notifications
                .into_iter()
                .map(|r| crate::models::notification::Schema {
                    id: r.id,
                    message: r.message,
                    target_user_id: r.target_user_id,
                    target_user: Box::new(__parent_stub__.clone()),
                })
                .collect(),
        })
    }
}
