crates/vespera_macro/src/schema_macro/from_model/snapshots/vespera_macro__schema_macro__from_model__generate__tests__non_circular_has_one_fk_required.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let address = model.find_related(crate::models::address::Entity).one(db).await?;
        Ok(Self {
            id: model.id,
            address: Box::new(
                crate::models::address::Schema::from_model(
                        address
                            .ok_or_else(|| sea_orm::DbErr::RecordNotFound(
                                format!(
                                    "Required relation '{}' not found", stringify!(address)
                                ),
                            ))?,
                        db,
                    )
                    .await?,
            ),
        })
    }
}
